# distributed_content_builder

./: .gitignore  CMakeLists.txt  README.md  research_results.md  Диаграмма без названия.drawio
Diagramms/: VCS.drawio
distributed_content_builder/: Agent.cpp  Agent.hpp  CMakeLists.txt  Interfaces.h  Logger.cpp  Logger.hpp  Queue.cpp  Queue.hpp  TestNetwork.cpp  TestNetwork.hpp  main.cpp  main.h
distributed_content_builder.xcodeproj/: project.pbxproj
distributed_content_builder.xcodeproj/project.xcworkspace/xcuserdata/evgenijkuratov.xcuserdatad/: UserInterfaceState.xcuserstate
distributed_content_builder.xcodeproj/xcuserdata/evgenijkuratov.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
distributed_content_builder.xcodeproj/xcuserdata/evgenijkuratov.xcuserdatad/xcschemes/: xcschememanagement.plist
distributed_content_builder/Agent/: Agent.cpp  Agent.hpp  CMakeLists.txt  RemoteAgent.cpp  RemoteAgent.hpp
distributed_content_builder/Content/: CMakeLists.txt  Content.cpp  Content.hpp  TestContent.cpp  TestContent.hpp
distributed_content_builder/Controller/: CMakeLists.txt  Controller.cpp  Controller.hpp  DebugController.cpp  DebugControllerDecorator.hpp  MetricsControllerDecorator.hpp
distributed_content_builder/HashList/: CMakeLists.txt  HashList.cpp  HashList.hpp
distributed_content_builder/HashManager/: CMakeLists.txt  HashManager.cpp  HashManager.hpp
distributed_content_builder/Interfaces/: CMakeLists.txt  IContent.h  IContent.hpp  IController.h  IController.hpp  IHashManager.hpp  ILogger.h  INetwork.h  INetwork.hpp  IQueue.h  IQueue.hpp  IRemoteAgent.h  IRemoteAgent.hpp  ITask.h  ITask.hpp  Interfaces.h  Interfaces.hpp
distributed_content_builder/Logger/: CMakeLists.txt  MacLogger.hpp  UnixLogger.h  UnixLogger.hpp  WinLogger.hpp
distributed_content_builder/MetricCollector/: CMakeLists.txt  MetricCollector.cpp  MetricCollector.hpp
distributed_content_builder/Network/: CMakeLists.txt  TestNetwork.hpp
distributed_content_builder/Queue/: CMakeLists.txt  Queue.cpp  Queue.hpp
distributed_content_builder/Task/: CMakeLists.txt  Task.cpp  Task.hpp  TaskCompress.cpp  TaskCompress.hpp  TestTask.cpp  TestTask.hpp
docs/: main.md  metrics.md  system.md
docs/diagramms/: VCS.drawio
mm/: mm_2.12.md
test_content/: qwe  tex_1.json  tex_2.json  tex_3.json  tex_4.json  tex_5.json
test_content/agents/RemoteAgent0/: hash.list
test_content/agents/RemoteAgent1/: hash.list
test_content/agents/RemoteAgent2/: hash.list
test_content/agents/RemoteAgent3/: hash.list
test_content/agents/RemoteAgent4/: hash.list
test_content/ready/: hashfile
test_content_unix/: tex_1.json
test_content_win/: tex_1.json  tex_2.json  tex_3.json  tex_4.json  tex_5.json  tex_6.json
tools/: compress_file.py  workflow_imitation.py
tools/reports/: generate_report.py  report_template.html
tools/test_files/: tex_1.json
tools/test_files/dir/: tex_2.json
